--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
 </head>
-<body>
+<body style="background-color:powderblue;">
     <header>
         <h1>My Resume/Portfolio</h1>
         <nav>
@@ -13,49 +13,94 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#hobbies">Hobbies</a></li>
                 <li><a href="#goals">Goals</a></li>
+                <li><a href="#contact">Contact Information</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Vivamus <a href="https://sait.ca">SAIT</a> ut turpis eget maximus. Morbi libero neque, sodales id lacus ut, aliquam rhoncus odio. Maecenas finibus ligula tortor, id facilisis nulla pulvinar vitae. Donec aliquam mi sapien, sed porttitor lorem pretium eu. Nullam eget porttitor diam, sed laoreet ligula. Aliquam ut ligula non nunc dictum hendrerit. Aliquam odio mi, consectetur nec arcu non, consequat porttitor nisl. Etiam lobortis lectus eget velit mollis ultrices. Aliquam elementum lacinia purus, sed faucibus metus aliquam mollis. Suspendisse tempor, nunc at tempor bibendum, neque lectus pulvinar elit, a feugiat quam libero vitae purus. Ut laoreet nisi elit, non iaculis nisi ornare id. Aenean sapien turpis, porta lacinia vulputate non, maximus eget sapien. Proin ut molestie est, a rhoncus enim. Nulla facilisi.</p>
+            <p>I am from <a href="https://en.wikipedia.org/wiki/Taipei">Taipei</a>, Taiwan </p>It's my first time living in Canada. Before that, I have lived Shanghai, China, as well as Louisiana and Boston in the US. I don't like the cold, but it's exciting for me to see snow in Calgary, because Taiwan is a sub-tropical island that never snows. Here are some things I like:
             <aside>
                 <ol type="a">
-                    <li>Turn right on 16 Ave NW</li>
-                    <li>Head south on Edmonton Trail</li>
-                    <li>Turn right on 1 Ave NE</li>
-                    <li>Honk and I'll find you</li>
+                    <li>Tim Horton's Dark Roast Coffee</li>
+                    <li>Salmon Sushi</li>
+                    <li>Pepperoni Mushroom Pizza</li>
+                    <li>Standup Comedy</li>
                 </ol>
-                <p>Note: remember to get bread</p>
+                <p>Here are some things I'm terrified of:</p>
                 <ol start="5" type="a">
-                    <li>Turn right on 16 Ave NW</li>
-                    <li>Head south on Edmonton Trail</li>
-                    <li>Turn right on 1 Ave NE</li>
-                    <li>Honk and I'll find you</li>
+                    <li>Giant Spiders</li>
+                    <li>Snakes</li>
+                    <li>Hawaiian Pizza</li>
+                    <li>Diet Mountain Dew</li>
                 </ol>
             </aside>
-            <p>Vivamus pharetra ut turpis eget maximus. Morbi libero neque, sodales id lacus ut, aliquam rhoncus odio. Maecenas finibus ligula tortor, id facilisis nulla pulvinar vitae. Donec aliquam mi sapien, sed porttitor lorem pretium eu. Nullam eget porttitor diam, sed laoreet ligula. Aliquam ut ligula non nunc dictum hendrerit. Aliquam odio mi, consectetur nec arcu non, consequat porttitor nisl. Etiam lobortis lectus eget velit mollis ultrices. Aliquam elementum lacinia purus, sed faucibus metus aliquam mollis. Suspendisse tempor, nunc at tempor bibendum, neque lectus pulvinar elit, a feugiat quam libero vitae purus. Ut laoreet nisi elit, non iaculis nisi ornare id. Aenean sapien turpis, porta lacinia vulputate non, maximus eget sapien. Proin ut molestie est, a rhoncus enim. Nulla facilisi.</p>
+            <p>I consider myself an <a href="https://en.wiktionary.org/wiki/ambivert">ambivert</a> leaning slightly toward the extrovert side. I enjoy talking with others and making new friends, but I can not do it for the entire day and need time for myself just to relax and recharge.</p>
         </section>
         <section id="hobbies">
-            <h2>My Work</h2>
-            <p>Vivamus pharetra ut turpis eget maximus. Morbi libero neque, sodales id lacus ut, aliquam rhoncus odio. Maecenas finibus ligula tortor, id facilisis nulla pulvinar vitae. Donec aliquam mi sapien, sed porttitor lorem pretium eu. Nullam eget porttitor diam, sed laoreet ligula. Aliquam ut ligula non nunc dictum hendrerit. Aliquam odio mi, consectetur nec arcu non, consequat porttitor nisl. Etiam lobortis lectus eget velit mollis ultrices. Aliquam elementum lacinia purus, sed faucibus metus aliquam mollis. Suspendisse tempor, nunc at tempor bibendum, neque lectus pulvinar elit, a feugiat quam libero vitae purus. Ut laoreet nisi elit, non iaculis nisi ornare id. Aenean sapien turpis, porta lacinia vulputate non, maximus eget sapien. Proin ut molestie est, a rhoncus enim. Nulla facilisi.</p>
+            <h2>Hobbies</h2>
+            <p>In my leisure time, I enjoy playing computer games, meditation, running, and exploring different corners of the city.</p>
+
+
+            <h3>Meditation</h3>
+            <p>Meditation is the art of doing nothing. I find it to have tremendous benefits for my mental and physical health. So I try to do it 20 minutes a day.</p>
             <figure>
-                <img src="kitten.jpeg" height="300" width="180" alt="Fluffy little kitten looking at the camera with evil intention" />
-                <figcaption>&copy; Anne Geddes, 1999</figcaption>
+                <img src="meditate.jpg" height="500" width="" alt="a man sitting cross-legged meditating" />
+                <figcaption>&copy; Sander Sammy, 2021</figcaption>
             </figure>
-            <h3>Web</h3>
-            <p>Vivamus pharetra ut turpis eget maximus. Morbi libero neque, sodales id lacus ut, aliquam rhoncus odio. Maecenas finibus ligula tortor, id facilisis nulla pulvinar vitae. Donec aliquam mi sapien, sed porttitor lorem pretium eu. Nullam eget porttitor diam, sed laoreet ligula. Aliquam ut ligula non nunc dictum hendrerit. Aliquam odio mi, consectetur nec arcu non, consequat porttitor nisl. Etiam lobortis lectus eget velit mollis ultrices. Aliquam elementum lacinia purus, sed faucibus metus aliquam mollis. Suspendisse tempor, nunc at tempor bibendum, neque lectus pulvinar elit, a feugiat quam libero vitae purus. Ut laoreet nisi elit, non iaculis nisi ornare id. Aenean sapien turpis, porta lacinia vulputate non, maximus eget sapien. Proin ut molestie est, a rhoncus enim. Nulla facilisi.</p>
-            <h3>Print</h3>
-            <p>Vivamus pharetra ut turpis eget maximus. Morbi libero neque, sodales id lacus ut, aliquam rhoncus odio. Maecenas finibus ligula tortor, id facilisis nulla pulvinar vitae. Donec aliquam mi sapien, sed porttitor lorem pretium eu. Nullam eget porttitor diam, sed laoreet ligula. Aliquam ut ligula non nunc dictum hendrerit. Aliquam odio mi, consectetur nec arcu non, consequat porttitor nisl. Etiam lobortis lectus eget velit mollis ultrices. Aliquam elementum lacinia purus, sed faucibus metus aliquam mollis. Suspendisse tempor, nunc at tempor bibendum, neque lectus pulvinar elit, a feugiat quam libero vitae purus. Ut laoreet nisi elit, non iaculis nisi ornare id. Aenean sapien turpis, porta lacinia vulputate non, maximus eget sapien. Proin ut molestie est, a rhoncus enim. Nulla facilisi.</p>
+            <h3>City Exploration by Walking</h3>
+            <p>I really enjoy exploring different corners of the city by walking. It's a great way to combine mini-adventures with physical exercise. You never know what's around the next corner, it could be your new favorite new restaurant or a random encounter with a big rabbit.</p>
+            <figure>
+                <img src="citywalk.jpg" height="500" width="" alt="a man with a backpack walking in a city" />
+                <figcaption>&copy; Joe Mannarino, 2019</figcaption>
+            </figure>
         </section>
         <section id="goals">
-            <h2>Contact</h2>
-            <p>Vivamus pharetra ut turpis eget maximus. Morbi libero neque, sodales id lacus ut, aliquam rhoncus odio. Maecenas finibus ligula tortor, id facilisis nulla pulvinar vitae. Donec aliquam mi sapien, sed porttitor lorem pretium eu. Nullam eget porttitor diam, sed laoreet ligula. Aliquam ut ligula non nunc dictum hendrerit. Aliquam odio mi, consectetur nec arcu non, consequat porttitor nisl. Etiam lobortis lectus eget velit mollis ultrices. Aliquam elementum lacinia purus, sed faucibus metus aliquam mollis. Suspendisse tempor, nunc at tempor bibendum, neque lectus pulvinar elit, a feugiat quam libero vitae purus. Ut laoreet nisi elit, non iaculis nisi ornare id. Aenean sapien turpis, porta lacinia vulputate non, maximus eget sapien. Proin ut molestie est, a rhoncus enim. Nulla facilisi.</p>
+            <h2>Goals</h2>
+            <p><style>
+                table, th, td {
+                  border:1px solid black;
+                }
+                </style>
+                <body>
+        
+                <table>
+                <tr>
+                  <th>Personal</th>
+                  <th>Academic</th>
+                  <th>Career</th>
+                </tr>
+                <tr>
+                  <td>Walk 10,000 Steps Everyday</td>
+                  <td>Graduate with 3.5+ GPA</td>
+                  <td>Become a skilled Full-Stack Developer</td>
+                </tr>
+                <tr>
+                  <td>Workout 3 times a week</td>
+                  <td>Learn how to code HTML</td>
+                  <td>Work in a job I enjoy</td>
+                </tr>
+                <tr>
+                  <td>Meditate 20min Daily</td>
+                  <td>Learn to code Java Script</td>
+                  <td>Land a job with upward mobility</td>
+                </tr>
+                <tr>
+                  <td>Eat less junk food</td>
+                  <td>Learn to code in CSS</td>
+                  <td>Have a corner office <s>with pretty secretaries whose only job is to tell me what a great boss I am everyday</s></td>
+                </tr>
+              </table></p>
         </section>
+        <section id="contact">
+            <h2>Contact Information</h2>
+            <p>Email: austin@not.actual.email.com </p>
+            <p>Cell: 977-123-456 </p>
     </main>
     <footer>
-        &copy; Your Name, 2023
+        &copy; Austin Lin, 2023
     </footer>
 </body>
 </html>
+<!-- This lab is really fun! I am going to call my mom up tonight and tell her I can code a web page now!-->
