--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>I am from <a href="https://en.wikipedia.org/wiki/Taipei">Taipei</a>, Taiwan </p>It's my first time living in Canada. Before that, I have lived Shanghai, China, as well as Louisiana and Boston in the US. I don't like the cold, but it's exciting for me to see snow in Calgary, because Taiwan is a sub-tropical island that never snows. Here are some things I like:
+            <p>Hi there! I am Austin Lin. I am from <a href="https://en.wikipedia.org/wiki/Taipei">Taipei</a>, Taiwan </p>It's my first time living in Canada. I have also lived Shanghai, China, as well as Louisiana and Boston in the US. I don't really like  cold winters, but it's exciting for me to see snow in Calgary, because Taiwan is a sub-tropical island that never snows. Here are some things that I like:
             <aside>
-                <ol type="a">
+                <ol type="1">
                     <li>Tim Horton's Dark Roast Coffee</li>
                     <li>Salmon Sushi</li>
                     <li>Pepperoni Mushroom Pizza</li>
                     <li>Standup Comedy</li>
                 </ol>
-                <p>Here are some things I'm terrified of:</p>
-                <ol start="5" type="a">
+                <p>Here are some things I'm not a fan of:</p>
+                <ol start="5" type="1">
                     <li>Giant Spiders</li>
                     <li>Snakes</li>
                     <li>Hawaiian Pizza</li>
                     <li>Diet Mountain Dew</li>
                 </ol>
             </aside>
-            <p>I consider myself an <a href="https://en.wiktionary.org/wiki/ambivert">ambivert</a> leaning slightly toward the extrovert side. I enjoy talking with others and making new friends, but I can not do it for the entire day and need time for myself just to relax and recharge.</p>
+            <p>Personality wise, I consider myself an <a href="https://en.wiktionary.org/wiki/ambivert">ambivert</a> leaning slightly toward the extrovert side. I enjoy talking with others and making new friends, but I can not do it for the entire day and need some time for myself just to relax and recharge.</p>
         </section>
         <section id="hobbies">
             <h2>Hobbies</h2>
@@ -50,7 +50,7 @@
                 <figcaption>&copy; Sander Sammy, 2021</figcaption>
             </figure>
             <h3>City Exploration by Walking</h3>
-            <p>I really enjoy exploring different corners of the city by walking. It's a great way to combine mini-adventures with physical exercise. You never know what's around the next corner, it could be your new favorite new restaurant or a random encounter with a big rabbit.</p>
+            <p>I really enjoy exploring different corners of the city by walking. It's a great way to combine mini-adventures with physical exercise. You never know what's around the next corner, it could be your new favorite new restaurant or a random encounter with a huge rabbit in the park.</p>
             <figure>
                 <img src="citywalk.jpg" height="500" width="" alt="a man with a backpack walking in a city" />
                 <figcaption>&copy; Joe Mannarino, 2019</figcaption>
