--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                     <li>Diet Mountain Dew</li>
                 </ol>
             </aside>
+            <figure>
+                <img src="me.jpg" height="300" width="" alt="a photo of myself smiling" />
+                <figcaption>&copy; Austin Lin, 2023</figcaption>
+            </figure>
             <p>Personality wise, I consider myself an <a href="https://en.wiktionary.org/wiki/ambivert">ambivert</a> leaning slightly toward the extrovert side. I enjoy talking with others and making new friends, but I can not do it for the entire day and need some time for myself just to relax and recharge.</p>
         </section>
         <section id="hobbies">
