--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </ol>
             </aside>
             <figure>
-                <img src="me.jpg" height="300" width="" alt="a photo of myself smiling" />
+                <img src="me.jpg" height="300" alt="a photo of myself smiling" />
                 <figcaption>&copy; Austin Lin, 2023</figcaption>
             </figure>
             <p>Personality wise, I consider myself an <a href="https://en.wiktionary.org/wiki/ambivert">ambivert</a> leaning slightly toward the extrovert side. I enjoy talking with others and making new friends, but I can not do it for the entire day and need some time for myself just to relax and recharge.</p>
@@ -50,13 +50,13 @@
             <h3>Meditation</h3>
             <p>Meditation is the art of doing nothing. I find it to have tremendous benefits for my mental and physical health. So I try to do it 20 minutes a day.</p>
             <figure>
-                <img src="meditate.jpg" height="500" width="" alt="a man sitting cross-legged meditating" />
+                <img src="meditate.jpg" height="500" alt="a man sitting cross-legged meditating" />
                 <figcaption>&copy; Sander Sammy, 2021</figcaption>
             </figure>
             <h3>City Exploration by Walking</h3>
             <p>I really enjoy exploring different corners of the city by walking. It's a great way to combine mini-adventures with physical exercise. You never know what's around the next corner, it could be your new favorite new restaurant or a random encounter with a huge rabbit in the park.</p>
             <figure>
-                <img src="citywalk.jpg" height="500" width="" alt="a man with a backpack walking in a city" />
+                <img src="citywalk.jpg" height="500" alt="a man with a backpack walking in a city" />
                 <figcaption>&copy; Joe Mannarino, 2019</figcaption>
             </figure>
         </section>
@@ -67,8 +67,7 @@
                   border:1px solid black;
                 }
                 </style>
-                <body>
-        
+                        
                 <table>
                 <tr>
                   <th>Personal</th>
@@ -95,12 +94,13 @@
                   <td>Learn to code in CSS</td>
                   <td>Have a corner office <s>with pretty secretaries whose only job is to tell me what a great boss I am everyday</s></td>
                 </tr>
-              </table></p>
+              </table>
         </section>
         <section id="contact">
             <h2>Contact Information</h2>
             <p>Email: austin@not.actual.email.com </p>
             <p>Cell: 977-123-456 </p>
+        </section>
     </main>
     <footer>
         &copy; Austin Lin, 2023
