--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hi there! I am Austin Lin, from <a href="https://en.wikipedia.org/wiki/Taipei">Taipei</a>, Taiwan </p>It's my first time living in Canada. I have also lived Shanghai, China, as well as Louisiana and Boston in the US. I don't really like  cold winters, but it's exciting for me to see snow in Calgary, because Taiwan is a sub-tropical island that never snows. Here are some things that I like:
+            <p>Hi there! I am Austin Lin, from <a href="https://en.wikipedia.org/wiki/Taipei">Taipei</a>, Taiwan. </p>
+            It's my first time living in Canada. I have also lived Shanghai, China, as well as Louisiana and Boston in the US. I don't really like  cold winters, but it's exciting for me to see snow in Calgary, because Taiwan is a sub-tropical island that never snows. Here are some things that I like:
             <aside>
                 <ol type="1">
                     <li>Tim Horton's Dark Roast Coffee</li>
