--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Self Introduction</title>
 </head>
 <body style="background-color:powderblue;">
     <header>
-        <h1>My Resume/Portfolio</h1>
+        <h1>Self Introduction</h1>
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
