--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <link href="styles/main.css" rel="stylesheet" />
+    <title>Self Introduction</title>
 </head>
-<body style="background-color:powderblue;">
+<body>
     <header>
-        <h1>My Resume/Portfolio</h1>
+        <h1>Self Introduction</h1>
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
@@ -37,11 +38,12 @@
                     <li>Diet Mountain Dew</li>
                 </ol>
             </aside>
+
+            <p>Personality wise, I consider myself an <a href="https://en.wiktionary.org/wiki/ambivert">ambivert</a> leaning slightly toward the extrovert side. I enjoy talking with others and making new friends, but I can not do it for the entire day and need some time for myself just to relax and recharge.</p>
             <figure>
                 <img src="me.jpg" height="300" alt="a photo of myself smiling" />
                 <figcaption>&copy; Austin Lin, 2023</figcaption>
-            </figure>
-            <p>Personality wise, I consider myself an <a href="https://en.wiktionary.org/wiki/ambivert">ambivert</a> leaning slightly toward the extrovert side. I enjoy talking with others and making new friends, but I can not do it for the entire day and need some time for myself just to relax and recharge.</p>
+            </figure>        
         </section>
         <section id="hobbies">
             <h2>Hobbies</h2>
@@ -64,9 +66,7 @@
         <section id="goals">
             <h2>Goals</h2>
             <p><style>
-                table, th, td {
-                  border:1px solid black;
-                }
+                
                 </style>
                         
                 <table>
@@ -99,8 +99,8 @@
         </section>
         <section id="contact">
             <h2>Contact Information</h2>
-            <p>Email: austin@not.actual.email.com </p>
-            <p>Cell: 977-123-456 </p>
+            <p>📨Email: austin@not.actual.email.com </p>
+            <p>📞Cell: 977-123-456 </p>
         </section>
     </main>
     <footer>
