--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/main.css" rel="stylesheet" />
     <title>Self Introduction</title>
+    <script defer src="js/file.js"></script><!-- js -->
 </head>
 <body>
     <header>
@@ -102,10 +103,15 @@
             <h2>Contact Information</h2>
             <p>📨Email: austin@not.actual.email.com </p>
             <p>📞Cell: 977-123-456 </p>
+            <p><button id="btn-alert">Click Here to Win a $100 Amazon Giftcard!</button></p>
+            <p><button id="btn-counter">test</button></p>
+            <p id="txt-counter">Number: 1</p>
         </section>
     </main>
     <footer>
-        &copy; Austin Lin, 2023
+        &copy; Austin Lin, <span id="year"></span>
+        
+        
     </footer>
 </body>
 </html>
