--- a/index.html
+++ b/index.html
@@ -105,8 +105,11 @@
             <p>📞Cell: 977-123-456 </p>
             <p><button id="btn-alert">Click Here to Win a $100 Amazon Giftcard!</button></p>
             <p><button id="btn-counter">test</button></p>
-            <p id="txt-counter">Number: 1</p>
+            <p id="txt-counter" class="odd">Number: 1</p>
         </section>
+        <ol id="numbers" type="1">
+        
+        </ol>
     </main>
     <footer>
         &copy; Austin Lin, <span id="year"></span>
