--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p>📨Email: austin@not.actual.email.com </p>
             <p>📞Cell: 977-123-456 </p>
             <p><button id="btn-alert">Click Here to Win a $100 Amazon Giftcard!</button></p>
-            <p><button id="btn-counter">test</button></p>
+            <p><button id="btn-counter">Click Counter</button></p>
             <p id="txt-counter" class="odd">Number: 1</p>
         </section>
         <ol id="numbers" type="1">
