--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/main.css" rel="stylesheet" />
     <title>Self Introduction</title>
-    <script defer src="js/file.js"></script><!-- js -->
+    <script defer src="js/file.js"></script><!-- I choose [defer] because it runs in sequence toward the end of the loading process. And it won't interrupt initial rendering to execute -->
 </head>
 <body>
     <header>
